--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ input:focus, textarea:focus, button:focus {
   font-weight: 300;
   font-size: 18px;
   padding-top: 1px;
-  margin: 16px; }
+  margin: 20px; }
 
 .purplehead {
   margin: auto;
@@ -32,7 +32,7 @@ a {
   text-decoration: none; }
 
 body {
-  background-image: url("/assets/img/bg.png");
+  background-image: url("http://gyanl.github.io/zerodesign/assets/img/bg.png");
   background-size: 240px 240px;
   margin: 0px; }
 
