--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,13 @@ input:focus, textarea:focus, button:focus {
   font-family: 'League Spartan';
   font-weight: 300;
   font-size: 18px;
-  padding-top: 1px;
-  margin: 20px; }
+  padding-top: 0px;
+  margin: 10px; }
+
+.10px {
+  padding: 10px;
+  margin: 10px;
+  height: 10px; }
 
 .purplehead {
   margin: auto;
@@ -55,8 +60,14 @@ body {
   width: 710px;
   margin: auto; }
 
-.spaced {
-  margin-top: 90px; }
+.blogcontainer {
+  width: 100%;
+  background: #fff;
+  margin: auto; }
+
+.blogcontainer img {
+  margin: auto;
+  width: 720px; }
 
 .Gyan {
   margin-left: 132px;
@@ -64,9 +75,6 @@ body {
   font-family: Roboto;
   font-size: 40px;
   font-weight: 800; }
-
-img {
-  position: static; }
 
 .card {
   display: inline-block;
@@ -104,6 +112,9 @@ img {
   color: rgba(0, 0, 0, 0.75); }
 
 .blogtitle {
+  padding-top: 120px;
+  margin: auto;
+  width: 710px;
   color: #333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -116,6 +127,8 @@ img {
   letter-spacing: -.003em; }
 
 .blogsubtitle {
+  margin: auto;
+  width: 710px;
   margin-top: 4px;
   color: rgba(0, 0, 0, 0.44);
   -webkit-font-smoothing: antialiased;
@@ -127,27 +140,23 @@ img {
   letter-spacing: -.003em; }
 
 .blogtxt {
+  margin: auto; }
+
+.blogtxt i {
+  font-style: italic; }
+
+.blogtxt p {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: Georgia,Cambria,"Times New Roman",Times,serif;
   letter-spacing: -0.01em;
   font-weight: 400;
   font-size: 20px;
-  line-height: 1.5; }
-
-.blogtxt i {
-  font-style: italic; }
-
-.blogcontainer {
+  line-height: 1.5;
   margin: auto;
-  padding-top: 120px;
-  width: 710px; }
-
-.blogcontainer img {
-  z-index: 1;
-  max-width: 720px;
-  margin-left: -5px;
-  padding-top: 32px; }
+  width: 710px;
+  padding-top: 16px;
+  padding-bottom: 16px; }
 
 .blogcontainer a {
   color: #3B58C4;
@@ -253,7 +262,7 @@ hr {
 /* MOBILE RULES */
 @media only screen and (max-width: 768px) {
   body {
-    background-size: 180px 180px; }
+    background-size: 120px 120px; }
   .footer {
     font-size: 16px;
     position: relative; }
@@ -261,14 +270,25 @@ hr {
     margin-left: auto;
     width: auto;
     margin: auto; }
-  .blogcontainer {
-    width: 100%; }
   .blogcontainer img {
-    max-width: 100%; }
+    width: 100%;
+    margin: auto; }
+  .blogtitle {
+    padding-top: 100px;
+    width: 90%;
+    margin: auto; }
+  .blogsubtitle {
+    padding-top: 14px;
+    width: 90%;
+    margin: auto; }
   .blogtxt {
+    margin: auto; }
+  .blogtxt p {
     margin: auto;
     width: 90%;
-    font-size: 16px; }
+    font-size: 16px;
+    padding-top: 14px;
+    padding-bottom: 20px; }
   .scale75 {
     transform: none; }
   .header-fixed p {
