--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,18 +33,15 @@ input:focus, textarea:focus, button:focus {
   font-size: 16px;
   color: #FF6E0F; }
 
-a {
-  text-decoration: none; }
-
 body {
   background-image: url("http://gyanl.github.io/zerodesign/assets/img/bg.png");
   background-size: 240px 240px;
   margin: 0px; }
 
 .header-fixed {
-  background: #333;
+  background: rgba(255, 0, 0, 0.1);
   box-shadow: 0px 2px 10px -6px rgba(0, 0, 0, 0.75);
-  position: absolute;
+  position: relative;
   top: 0px;
   left: 0px;
   right: 0px;
@@ -56,7 +53,13 @@ body {
   font-size: 18px;
   color: #fff; }
 
+.header-fixed a {
+  text-decoration: none; }
+
 .header-fixed p {
+  font-family: 'League Spartan';
+  text-transform: uppercase;
+  padding-top: 6px;
   width: 710px;
   margin: auto; }
 
@@ -140,7 +143,8 @@ body {
   letter-spacing: -.003em; }
 
 .blogtxt {
-  margin: auto; }
+  margin: auto;
+  padding-bottom: 32px; }
 
 .blogtxt i {
   font-style: italic; }
@@ -232,21 +236,14 @@ body {
   transform: scale(0.75, 0.75); }
 
 /*gyanl*/
-.header-fixed a {
-  color: #fff;
-  text-decoration: none;
-  background-image: -webkit-linear-gradient(bottom, #333, #333 0.08333em, #fff 0.08333em, #fff 0.125em, #333 0.125em);
-  background-image: linear-gradient(to top, #333, #333 0.08333em, #fff 0.08333em, #fff 0.125em, #333 0.125em);
-  text-shadow: -0.04167em -0.04167em 0 #333, -0.04167em -0.02083em 0 #333, -0.04167em 0em 0 #333, -0.04167em 0.02083em 0 #333, -0.04167em 0.04167em 0 #333, -0.02083em -0.04167em 0 #333, -0.02083em -0.02083em 0 #333, -0.02083em 0em 0 #333, -0.02083em 0.02083em 0 #333, -0.02083em 0.04167em 0 #333, 0em -0.04167em 0 #333, 0em -0.02083em 0 #333, 0em 0em 0 #333, 0em 0.02083em 0 #333, 0em 0.04167em 0 #333, 0.02083em -0.04167em 0 #333, 0.02083em -0.02083em 0 #333, 0.02083em 0em 0 #333, 0.02083em 0.02083em 0 #333, 0.02083em 0.04167em 0 #333, 0.04167em -0.04167em 0 #333, 0.04167em -0.02083em 0 #333, 0.04167em 0em 0 #333, 0.04167em 0.02083em 0 #333, 0.04167em 0.04167em 0 #333; }
-
 .UItext {
   text-align: center;
   text-transform: uppercase;
-  padding-bottom: 10px;
-  color: #333;
+  padding-top: 44px;
+  color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: Roboto,Helvetica,sans-serif;
+  font-family: 'League Spartan';
   letter-spacing: .01rem;
   font-weight: 300;
   font-style: normal;
@@ -274,7 +271,7 @@ hr {
     width: 100%;
     margin: auto; }
   .blogtitle {
-    padding-top: 100px;
+    padding-top: 60px;
     width: 90%;
     margin: auto; }
   .blogsubtitle {
@@ -282,7 +279,8 @@ hr {
     width: 90%;
     margin: auto; }
   .blogtxt {
-    margin: auto; }
+    margin: auto;
+    padding-bottom: 20px; }
   .blogtxt p {
     margin: auto;
     width: 90%;
@@ -295,7 +293,9 @@ hr {
     width: auto;
     padding-left: 4px; }
   .UItext {
-    margin-bottom: 0px; }
+    margin-bottom: 0px;
+    padding-top: 30px;
+    padding-bottom: 10px; }
   hr {
     margin: 30px;
     margin-top: 36px; } }
