--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,39 @@ input:focus, textarea:focus, button:focus {
 a {
   text-decoration: none; }
 
+.tags {
+  width: 710px;
+  margin: auto; }
+
+.tag {
+  color: #FFF;
+  font-family: "Roboto";
+  font-weight: 800;
+  background-color: #ccc;
+  border-radius: 100px;
+  display: inline-block;
+  min-width: 90px;
+  height: 32px;
+  padding: 0 24px;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 34px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  box-sizing: border-box;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  -webkit-transition-property: box-shadow, transform,background-color;
+  transition-property: box-shadow, transform,background-color;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0); }
+
+.tag:hover, .tag:active {
+  background-color: #AA1130; }
+
 .dtext {
   position: relative;
   color: #fff;
@@ -218,7 +251,7 @@ body {
   left: 0px;
   right: 0px;
   text-align: center;
-  font-size: 20px;
+  font-size: 14px;
   margin-top: 40px; }
 
 /* Uses https://github.com/IanLunn/Hover */
@@ -292,6 +325,9 @@ hr {
 
 /* MOBILE RULES */
 @media only screen and (max-width: 768px) {
+  .tags {
+    width: auto;
+    padding-left: 16px; }
   body {
     background-size: 120px 120px; }
   .footer {
