--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Poppins:400,600);
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,800);
+@import url(https://fonts.googleapis.com/css?family=Karla:700);
 @font-face {
   font-family: system;
   font-style: normal;
@@ -24,6 +23,7 @@ a {
   width: 48px !important; }
 
 .author .authorname {
+  -webkit-transform: translate(56px, -57px);
   transform: translate(56px, -57px);
   color: #333;
   width: 300px;
@@ -51,8 +51,8 @@ a {
 
 .butt {
   color: #000;
-  font-family: "Poppins";
-  font-weight: 600;
+  font-family: "Karla";
+  font-weight: 700;
   background-color: #fff;
   display: inline-block;
   min-width: 90px;
@@ -79,7 +79,7 @@ a {
 
 .buttactive {
   color: #000;
-  font-family: "Poppins";
+  font-family: "Karla";
   font-weight: 600;
   background-color: #fff;
   display: inline-block;
@@ -113,8 +113,8 @@ a {
 .dtext {
   position: relative;
   color: #fff;
-  font-family: 'Poppins';
-  font-weight: 600;
+  font-family: 'Karla';
+  font-weight: 700;
   font-size: 18px;
   padding-top: 0px;
   margin: 10px; }
@@ -130,7 +130,7 @@ a {
   background-image: linear-gradient(#4F173C 0%, #210B19 100%); }
 
 .zero {
-  font-family: 'Poppins';
+  font-family: 'Karla';
   font-weight: 600;
   font-size: 32px;
   color: #000;
@@ -142,8 +142,8 @@ a {
   transition-property: font-size; }
 
 .subzero {
-  font-family: 'Poppins';
-  font-weight: 600;
+  font-family: 'Karla';
+  font-weight: 700;
   font-size: 16px;
   color: #FF6E0F; }
 
@@ -172,7 +172,7 @@ body {
   z-index: 100;
   position: fixed;
   border-bottom: 1px solid #ddd;
-  background: #f9f9f9;
+  background: #fff;
   font-weight: 300;
   top: 0px;
   left: 0px;
@@ -184,10 +184,30 @@ body {
   font-size: 18px;
   color: #333; }
 
+.down-header {
+  transform: translateX(277px);
+  z-index: 101;
+  position: fixed;
+  font-weight: 300;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  padding: 15px;
+  height: 21px;
+  margin: auto;
+  width: auto;
+  font-weight: 300;
+  font-size: 18px;
+  color: #333;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: top;
+  transition-property: top; }
+
 .header-fixed p {
   color: #333;
   font-family: system, sans-serif;
-  width: 710px;
+  width: 830px;
   font-weight: 300;
   margin: auto; }
 
@@ -196,9 +216,10 @@ body {
   text-shadow: 0 0 0 #fff, .05em .05em 0 #fff, 0 0, -.05em .05em 0 #fff;
   /*  gradient background allows us to use css only & re-position it  */
   background: -webkit-linear-gradient(#333, #000) center 1.1em no-repeat;
+  background: -webkit-linear-gradient(#333, #000) center 1.1em no-repeat;
   background: linear-gradient(#333, #000) center 1.1em no-repeat;
   /*  can precisely control size in relation to the text  */
-  background-size: 100% 1px;
+  background-size: 0% 2px;
   /*  now the underline supports transitions  */
   -webkit-transition-property: background-size;
   transition-property: background-size;
@@ -210,8 +231,11 @@ body {
   background-size: 100% 2px; }
 
 .blogcontainer {
-  border-bottom: 1px solid #ddd;
-  width: 100%;
+  padding-bottom: 30px;
+  margin-top: 100px !important;
+  border: 1px solid #ddd;
+  max-width: 840px;
+  border-radius: 10px;
   background: #fff;
   margin: auto; }
 
@@ -235,8 +259,6 @@ body {
   margin: 10px;
   width: 320px;
   height: 160px;
-  -webkit-box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.4);
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
@@ -270,7 +292,8 @@ body {
   color: #000; }
 
 .blogtitle {
-  padding-top: 120px;
+  padding-top: 54px;
+  text-align: center;
   margin: auto;
   width: 710px;
   color: #333;
@@ -300,6 +323,7 @@ body {
   letter-spacing: -.003em; }
 
 .blogsubtitle {
+  text-align: center;
   margin: auto;
   width: 710px;
   margin-top: 4px;
@@ -433,7 +457,7 @@ body {
   color: #000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Poppins';
+  font-family: 'Karla';
   letter-spacing: .01rem;
   font-weight: 600;
   font-style: normal;
@@ -458,6 +482,11 @@ hr {
     margin-left: auto;
     width: auto;
     margin: auto; }
+  .blogcontainer {
+    border-radius: 0px;
+    margin-top: 0px !important;
+    border: none;
+    border-bottom: 1px solid #ddd; }
   .blogcontainer img {
     width: 100%;
     margin: auto;
@@ -472,6 +501,7 @@ hr {
     margin: auto; }
   .blogsubtitle {
     padding-top: 8px;
+    padding-bottom: 14px;
     width: 90%;
     margin: auto; }
   .blogtxt {
@@ -500,6 +530,8 @@ hr {
   .header-fixed p {
     width: auto;
     padding-left: 8px; }
+  .header-fixed a {
+    background-size: 100% 2px; }
   .UItext {
     margin-bottom: 0px;
     padding-top: 30px;
@@ -521,4 +553,8 @@ hr {
     padding: 0 22px; }
   .zero {
     -webkit-transition-duration: 0.25s;
-    transition-duration: 0.25s; } }
+    transition-duration: 0.25s; }
+  .down-header {
+    border-bottom: 1px solid #ddd;
+    background: #fff;
+    transform: translateX(0px); } }
