--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,7 @@ a {
   color: #FF6E0F; }
 
 body {
-  background-color: #eee;
+  background-color: #f8f8f8;
   margin: 0px; }
 
 .header-home2 {
@@ -395,7 +395,6 @@ body {
 .blogcontainer {
   padding-bottom: 30px;
   margin-top: 100px !important;
-  border: 1px solid #ddd;
   max-width: 840px;
   border-radius: 10px;
   background: #fff;
