--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Dosis:700);
 @font-face {
   font-family: system;
@@ -367,12 +367,12 @@ a {
   padding-top: 16px; }
 
 .dtext3 {
-  text-shadow: 0px 2px 2px rgba(150, 150, 150, 0.45);
+  text-shadow: 0px 2px 2px rgba(150, 150, 150, 0.6);
   color: #fff !important;
   padding: 20px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+  font-family: Dosis, sans-serif;
   letter-spacing: -0.01em;
   font-weight: 400;
   font-size: 60px;
@@ -711,12 +711,9 @@ body {
 
 /*gyanl*/
 .magic {
-  border-radius: 10px;
-  height: 80vh;
-  margin-top: 0px;
-  margin-right: 36px;
-  margin-left: 36px;
-  margin-left: 36px;
+  height: 100vh;
+  margin-top: 50px;
+  margin-bottom: -50px;
   background-image: url("http://data.whicdn.com/images/121606684/large.jpg");
   background-size: cover; }
 
