--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Dosis:700);
-@font-face {
-  font-family: system;
-  font-style: normal;
-  font-weight: 400;
-  src: local(".SFNSText-Regular"), local(".HelveticaNeueDeskInterface-Regular"), local(".LucidaGrandeUI"), local("Ubuntu"), local("Segoe UI"), local("Roboto-Regular"), local("DroidSans"), local("Tahoma"); }
-
 /*https://codepen.io/saransh/pen/BKJun*/
 #stars {
   overflow: hidden;
@@ -99,7 +93,7 @@ a {
 
 .name {
   margin-top: 4px;
-  font-family: system,Dosis,Helvetica,Roboto,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: #333;
   font-size: 24px;
   font-weight: 700; }
@@ -108,7 +102,7 @@ a {
   color: #000;
   padding-top: 6px;
   padding-bottom: 10px;
-  font-family: system,Roboto,Helvetica,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
   font-weight: 400; }
 
@@ -154,7 +148,7 @@ a {
   align-items: center;
   font-size: 14px;
   text-transform: uppercase;
-  font-family: system;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 900;
   padding: 10px;
   padding-left: 20px;
@@ -238,7 +232,7 @@ a {
   position: absolute;
   top: 55%;
   transform: translateY(-50%);
-  font-family: system;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-kerning: auto;
   padding-bottom: 100px; }
 
@@ -261,7 +255,7 @@ a {
   width: 300px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: system;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: .01rem;
   font-weight: 800;
   font-style: normal;
@@ -273,7 +267,7 @@ a {
   color: #999;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: system;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: .01rem;
   font-weight: 400;
   font-style: normal;
@@ -284,7 +278,7 @@ a {
 .butt {
   pointer-events: all;
   color: #000;
-  font-family: "system";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
   background-color: #fff;
   display: inline-block;
@@ -313,7 +307,7 @@ a {
 .buttactive {
   pointer-events: all;
   color: #000;
-  font-family: "system";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 600;
   background-color: #fff;
   display: inline-block;
@@ -347,7 +341,7 @@ a {
 .dtext {
   position: relative;
   color: #333;
-  font-family: 'system';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
   font-size: 24px;
   margin: 20px;
@@ -401,7 +395,7 @@ a {
   transition-property: font-size; }
 
 .subzero {
-  font-family: 'system';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
   font-size: 16px;
   color: #FF6E0F; }
@@ -466,7 +460,7 @@ body {
 
 .header-fixed p {
   color: #333;
-  font-family: system, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   width: 830px;
   font-weight: 300;
   margin: auto; }
@@ -507,7 +501,7 @@ body {
 .Gyan {
   margin-left: 132px;
   margin-top: 36px;
-  font-family: system, Roboto;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-size: 40px;
   font-weight: 800; }
 
@@ -541,7 +535,7 @@ body {
 
 .txt {
   width: 220px;
-  font-family: system, Roboto, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 300;
   font-size: 18px;
   position: relative;
@@ -558,7 +552,7 @@ body {
   color: #333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: system, Roboto, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: .01rem;
   font-weight: 700;
   font-style: normal;
@@ -573,7 +567,7 @@ body {
   color: #333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: system, Roboto, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: .01rem;
   font-weight: 700;
   font-style: normal;
@@ -589,7 +583,7 @@ body {
   color: rgba(0, 0, 0, 0.6);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: system;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: .01rem;
   font-weight: 400;
   font-size: 18px;
@@ -617,7 +611,7 @@ body {
 .blogtxt .imgdesc {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: system, Roboto, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: -0.01em;
   font-weight: 400;
   text-align: center;
@@ -637,7 +631,7 @@ body {
 
 .footer {
   border-top: 1px solid #ddd;
-  font-family: system, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 300;
   background: #fff;
   width: auto;
@@ -667,7 +661,7 @@ body {
   text-align: center;
   text-decoration: none;
   font-size: 20px;
-  font-family: system, Roboto, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 900;
   display: inline-block;
   vertical-align: middle;
@@ -745,7 +739,7 @@ body {
   color: #000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'system';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: .01rem;
   font-weight: 600;
   font-style: normal;
